@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: save.c,v 1.225 2013/08/09 20:50:32 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: save.c,v 1.226 2013/08/20 22:09:18 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - save.c */
@@ -778,6 +778,7 @@ set origin %g,%g\n",
     SAVE_MINI(SECOND_X_AXIS);
     SAVE_MINI(SECOND_Y_AXIS);
     SAVE_MINI(COLOR_AXIS);
+    SAVE_MINI(POLAR_AXIS);
 #undef SAVE_MINI
 
     save_tics(fp, FIRST_X_AXIS);
