@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.84 2013/06/19 23:04:59 sfeam Exp $
+ * $Id: tables.h,v 1.85 2013/08/20 22:09:21 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -87,7 +87,7 @@ enum set_id {
 #endif
     S_MULTIPLOT, S_MX2TICS, S_NOMX2TICS, S_MXTICS, S_NOMXTICS,
     S_MY2TICS, S_NOMY2TICS, S_MYTICS, S_NOMYTICS,
-    S_MZTICS, S_NOMZTICS,
+    S_MZTICS, S_NOMZTICS, S_MRTICS, S_NOMRTICS,
     S_OFFSETS, S_ORIGIN, SET_OUTPUT, S_PARAMETRIC,
     S_PALETTE, S_PM3D, S_COLORBOX, S_COLORNAMES,
     S_CBLABEL, S_CBRANGE, S_CBTICS, S_NOCBTICS, S_MCBTICS, S_NOMCBTICS,
