@@ -23,6 +23,7 @@ New features, changes and fixes since gnuplot version 4.6
 * NEW Additional levels of user-specified axis tics
 * NEW complex math routines cerf, cdawson, erfi, faddeeva from libcerf if present
 * NEW i/v/V hotkeys to toggle all plots on the screen on/off
+* NEW 'set mrtics'   (minor tics on polar axis)
 * CHANGE mouse wheel and +/- keys zoom centered on current mouse position
 * CHANGE Provide kdensity bandwidth via a keyword rather than a data column
 * CHANGE Pipe (popen/pclose) emulation within wgnuplot
