@@ -1,3 +1,8 @@
+2013-08-20  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/set.c src/tables.c src/tables.h src/unset.c src/axis.c src/show.c
+	src/save.c docs/gnuplot.doc:  Support minor tics on polar axis.
+
 2013-08-20  Jon Gjengset <jon@thesquareplanet.com>
 
 	* src/term_api.h src/gplt_x11.c src/mouse.c term/x11.trm term/qt.trm
